@@ -1,5 +1,7 @@
 Revision history for Data::Validation
 
+          - Exceptions thrown from check_form use self level
+
 0.27.1    2016-11-02 15:15:20
           - Solely numeric passwords not allowed
 
